--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,35 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/fragment_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+    </androidx.viewpager.widget.ViewPager>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:weightSum="5">
-
-        <ImageView
-            android:id="@+id/btn_userFragment"
-            style="@style/btnNavigation"
-            android:src="@drawable/ic_person_outline_black_24dp" />
-
-        <ImageView
-            android:id="@+id/btn_chatRoomFragment"
-            style="@style/btnNavigation"
-            android:src="@drawable/ic_talk_outline_black24dp"/>
-
-        <ImageView
-            android:id="@+id/btn_viewFragment"
-            style="@style/btnNavigation"
-            android:src="@drawable/ic_visibility_outline_black_24dp"/>
-
-        <ImageView
-            android:id="@+id/btn_shoppingFragment"
-            style="@style/btnNavigation"
-            android:src="@drawable/ic_shopping_bag_outline_black_24dp" />
-
-        <ImageView
-            android:id="@+id/btn_plusFragment"
-            style="@style/btnNavigation"
-            android:src="@drawable/ic_more_horiz_black_24dp"/>
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/fragment_list"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
