--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="btnNavigation" parent="Widget.MaterialComponents.Button">
-        <item name="backgroundTint">@color/black</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:layout_width">0dp</item>
+    <style name="navigation_bottom_list">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingVertical">@string/base_padding</item>
-    </style>
-
-    <style name="toggleBtnNavigation">
+        <item name="android:layout_height">match_parent</item>
     </style>
 </resources>
