--- a/app/src/main/res/drawable/ic_chat_selected.xml
+++ b/app/src/main/res/drawable/ic_chat_selected.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="1000"
     >
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="#000000"
       android:pathData="M500,73.9C229.8,73.9 10,228 10,417.3c0,107.5 69,206.1 189.8,271.6c-20.2,73.7 -52.4,168.6 -94.4,219.3c-2.8,3.4 -3.3,8.2 -1.2,12.1c1.9,3.6 5.6,5.8 9.7,5.8c0.3,0 0.7,0 1,-0.1c9.2,-0.8 224.5,-22 362.3,-165.7c7.6,0.2 15.2,0.4 22.9,0.4c270.2,0 490,-154.1 490,-343.4C990,228 770.2,73.9 500,73.9z"/>
 </vector>
