--- a/app/src/main/res/menu/menu_plus_fragment.xml
+++ b/app/src/main/res/menu/menu_plus_fragment.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item  android:title="검색" android:icon="@drawable/ic_search" app:showAsAction="always"/>
-    <item  android:title="친구 추가" android:icon="@drawable/ic_addfriends" app:showAsAction="always"/>
+    <item android:title="QR코드스캔" android:icon="@drawable/ic_scanner" app:showAsAction="always"/>
     <item  android:title="톡뮤직" android:icon="@drawable/ic_musicnote" app:showAsAction="always"/>
     <item  android:title="옵션 더보기" android:icon="@drawable/ic_options" app:showAsAction="always"/>
 </menu>
