--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,6 +26,7 @@
 
     <style name="navigation_bottom_view">
         <item name="android:background">@color/light_black</item>
+        <item name="tabIndicatorColor">@color/light_black</item>
     </style>
 
     <style name="navigation_bottom_items">
